fixed console message spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -27,13 +27,14 @@ body {
 
 header {
   width: 100%;
-  height: 275px;
+  height: 90%;
   color: white;
 }
 
 h1 {
   text-align: center;
   color: white;
+  width: 100%;
 }
 
 h2 {
